add code for vzr
